--- a/Universities.html
+++ b/Universities.html
@@ -8,11 +8,14 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" href="css/style.css">
 </link>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
 <body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js">
 
-    </script>
     <script>
         $(document).ready(
             function () {
@@ -58,13 +61,13 @@
 
                 $.ajax(
                     {
-                        url: "http://api.openweathermap.org/data/2.5/weather?units=imperial&q=" + $("#city").val() +
+                        url: "http://api.openweathermap.org/data/2.5/weather?units=metric&q=" + $("#city").val() +
                             "&appid=7ce6041ebabda209af72ac595c6145e8", async: false,
                         success: function (result) {
                             //2643741
                             var clime = result.weather[0].main;
                             var temp = result.main.temp;
-                            var toAppend = $("#weather").text().substring(0,6).concat(clime + "-" + temp);
+                            var toAppend = $("#weather").text().substring(0, 6).concat(clime + ">" + temp);
                             // .substring(1,7).append(clime + "-" + temp);
                             $("#weather").text(toAppend);
                             // $("#weather").text (result.main.temp);
@@ -76,9 +79,28 @@
         });
     </script>
 
-    <nav class="navbar navbar bg-dark text-light sticky-top">
 
+    <nav class="navbar navbar-expand-lg bg-light navbar-light sticky-top">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navButtons">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navButtons">
+                <ul class="navbar-nav ml-auto">
+                    <li>
+                        <h6 class="p-2"><a href="MoreInfo.html">About</h6></a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <h6 class="p-2">Call</h6>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
+
 
     <div hidden>
         <form action="#" name="sentMessage" id="contactForm" method="post" novalidate>
@@ -143,7 +165,7 @@
                     </div>
                     <button id="checkWeather" class="btn btn-primary">Submit</button>
                     <div class="col-md-12 lg-12 ">
-                    <h3 id="weather" class="bg-dark text-muted p-2 mb-2 mt-2 " id="temp">Temp : </h3>
+                        <h3 id="weather" class="bg-dark text-muted p-2 mb-2 mt-2 ml-auto " id="temp">Temp : </h3>
                     </div>
                 </div>
             </div>
